# aesdrive-decryptor

./: .gitignore  .gitignore_improved  AESDrive_Settings.ini.aesd  DOCS.md  IMPROVEMENTS.md  MANIFEST.in  NAVIGATION_FIXED.md  README.md  README_improved.md  REORGANIZATION.md  SECURITY.md  Show-FilePermissions.ps1  TOC.md  TOC_OLD.md  USAGE.md  __init__.py  aes_decryptor.py  aes_drive_test.txt.aesd  aesdecryptor copy.py  aesdecryptor.py  aesdecryptor_improved.py  compare_directories.py  compare_directories_improved.py  dev.py  err_files.txt.aesf  lulu.jpg.aesd  orig.zed.txt  pyproject.toml  read_file.py  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  setup_venv.bat  setup_venv.py  setup_venv.sh  test-aes-gcm.py  test-aes.py  test-xts-aes.py  test.png.aesd  (+7 more)
docs/: DOCS.md  SECURITY.md  USAGE.md
res/: __init__.py  aes_date_file.py  aesdatafile.py  aesdatafile_improved.py  config.py  crypto_helper.py  fnhelper.py  fnhelper_improved.py
scripts/: check_navigation.py  compare_directories.py  run_tests.py
src/: __init__.py  aes_decryptor.py  benchmark.py
src/aesdrive_decryptor/: __init__.py  __main__.py  constants.py  decryptor.py  main.py  security.py
tests/: __init__.py  test_aes_decryptor.py  test_aesdatafile.py  test_extensions.py  test_fnhelper.py  test_setup.py
