[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aesdrive-decryptor"
version = "1.0.0"
description = "Unofficial Python implementation to decrypt AES Drive encrypted files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "AES Drive Decryptor Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=41.0.0",
    "colorama>=0.4.6"
]

[project.scripts]
aesdecryptor = "aesdecryptor:main"

[project.urls]
Homepage = "https://github.com/aesdrive-decryptor/aesdrive-decryptor"
Repository = "https://github.com/aesdrive-decryptor/aesdrive-decryptor"
Issues = "https://github.com/aesdrive-decryptor/aesdrive-decryptor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["res*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]